# hill-jobs

./: .gitignore  CHANGELOG.md  CLAUDE.md  Makefile  README.md  railway.toml
apps/api/: Dockerfile  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0002_add_sync_fields_and_sync_runs.py  0003_add_salary_fields.py  0004_backfill_search_document.py  0005_create_subscribers_table.py  30541b8fa13c_create_jobs_table.py
apps/api/app/: config.py  db.py  main.py
apps/api/app/api/: deps.py
apps/api/app/categorization/: classify_job.py  role_kinds.py
apps/api/app/data/: member_committees.py  member_parties.py  member_states.py
apps/api/app/ingest/: hvaps_pdf_parser.py  llm_salary_extractor.py  mark_missing_jobs.py  run_all.py  salary_parser.py  source_registry.py  upsert_jobs.py
apps/api/app/lib/: email.py  email_templates.py  fetch_html.py
apps/api/app/models/: __init__.py  jobs.py  subscribers.py  sync_runs.py
apps/api/app/schemas/: ingest.py  jobs.py  subscribers.py
apps/api/app/search/: query_jobs.py  slugs.py
apps/api/scripts/: backfill_salaries.py  cron_ingest.py  ingest_csod.py  send_newsletter.py
apps/api/tests/: conftest.py
apps/api/tests/categorization/: test_classify_job.py  test_role_kinds.py
apps/api/tests/ingest/: test_aoc_usajobs.py  test_cbo_bizmerlin.py  test_cross_source_dedup.py  test_csod.py  test_house_dems_resumebank.py  test_hvaps_adapter.py  test_hvaps_email.py  test_hvaps_parser.py  test_live_scrape.py  test_llm_salary_extractor.py  test_loc.py  test_mark_missing.py  test_run_all.py  test_salary_parser.py  (+2 more)
(+64 files in other folders)
