[project]
name = "leg-branch-jobs-api"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "fastapi",
  "uvicorn[standard]",
  "sqlalchemy",
  "alembic",
  "psycopg[binary]",
  "pydantic",
  "pydantic-settings",
  "httpx",
  "beautifulsoup4",
  "lxml",
  "pdfplumber",
  "playwright",
]

[dependency-groups]
dev = [
  "pytest",
  "pytest-asyncio",
  "httpx",
  "respx",
]

[tool.pytest.ini_options]
pythonpath = ["."]
markers = [
  "live: hits real external sites (may be slow, requires network)",
]
